# xkrt

./: CMakeLists.txt  README.md  modulefile
api/c/: .gitignore  CMakeLists.txt  README.md  xkrt.h
api/c/cmake/: CXKRTConfig.cmake.in
api/c/include/xkrt/: xkrt.h
api/c/src/: xkrt.cc
api/c/tests/: CMakeLists.txt  task-spawn.c
cmake/: BooleanUtils.cmake  FindJulia.cmake  FindXKRT.cmake  Findhwloc.cmake
docs/: .gitignore  Doxyfile  Makefile  README.md  conf.py  environment.rst  examples.rst  index.rst
examples/: axpy.cc  task-axpby-rec.cc  task-axpby-stf.cc  task-axpby.cc  task-device.cc
examples/fib/: main.cc
examples/heat-diffusion-2d/: CMakeLists.txt
examples/io/: main.cc
include/xkrt/: callback.h  consts.h  deprecated.h  internals.h  namespace.h  runtime.h  support.h.in  types.h  version.template  xkrt-support.h  xkrt-version.h  xkrt.h
public/: alignas_8h_source.html  bits-to-str_8h_source.html  bits_8h_source.html  cairo_8h_source.html  callback_8h_source.html  classDependencyDomain-members.html  classDependencyDomain__inherit__graph.map  classDependencyMap-members.html  classDependencyMap.html  classDependencyMap__inherit__graph.md5  classDummyMemoryCoherencyController-members.html  classIQueue.html  classIQueue__inherit__graph.map  classIQueue__inherit__graph.md5  classInterval-members.html  classInterval.html  classIntervalDependencyTreeNode.html  classIntervalDependencyTreeNode__inherit__graph.md5  classIntervalDependencyTreeSearch-members.html  classIntervalDependencyTreeSearch.html  classIntervalDependencyTreeSearch__coll__graph.map  classIntervalDependencyTreeSearch__coll__graph.md5  classKBLASDependencyTree.html  classKBLASDependencyTreeNode-members.html  classKBLASDependencyTreeNode.html  classKBLASDependencyTreeNode__coll__graph.map  classKBLASDependencyTreeNode__coll__graph.md5  classKBLASDependencyTreeNode__inherit__graph.map  classKBLASDependencyTreeSearch__coll__graph.md5  classKBLASDependencyTree__inherit__graph.map  classKBLASDependencyTree__inherit__graph.md5  classKBLASMemoryTreeNodeSearch-members.html  classKBLASMemoryTreeNodeSearch.html  classKBLASMemoryTreeNodeSearch_1_1Partite-members.html  classKBLASMemoryTreeNodeSearch_1_1Partite.html  classKBLASMemoryTreeNodeSearch_1_1Partite__coll__graph.map  classKBLASMemoryTreeNodeSearch_1_1Partition-members.html  classKBLASMemoryTreeNodeSearch_1_1Partition.html  classKBLASMemoryTreeNodeSearch_1_1Partition__coll__graph.map  classKBLASMemoryTreeNodeSearch_1_1Partition__coll__graph.md5  (+413 more)
public/_sources/: examples-c.rst.txt  index.rst.txt  installation.rst.txt
public/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_c.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  functions_0.js  functions_2.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  variables_1.js  variables_2.js
src/: driver.cc  memory.cc  power.cc  runtime.cc  sched.cc  task.cc
src/conf/: conf.cc
src/debug/: cairo.cc
src/distribution/: distribution.cc
src/driver/: device.cc  driver.cc  driver_cl.cc  driver_cu.cc  driver_hip.cc  driver_host.cc  driver_sycl.cc  driver_ze.cc  queue.cc  stream.cc
src/file/: readwrite.cc
src/logger/: bits-to-str.cc  logger.cc  metric.cc
src/memory/: access.cc  coherent.cc  (+8 more)
tests/: CMakeLists.txt  deinit.cc  fib-task-capture.cc  fib-task-format.cc  file-read.cc  init.cc  memory-register-assisted-async-depend.cc  memory-register-assisted-async.cc  memory-register-assisted-unregister.cc  memory-register-assisted.cc  memory-register-async-legacy-memcpy-split.cc  memory-register-async-legacy.cc  memory-register-async.cc  memory-register-async.conf.cc  memory-register-protection.cc  memory-touch-async.cc  memory-touch-register-unregister-async.cc  memory-unregister-async.cc  moldability.cc  register-async.cc  sync.cc  task-dependency-handle.cc  task-dependency-interval-matrix.cc  task-dependency-interval.cc  task-dependency-point.cc  task-dependency.cc  task-format-host.cc  task-format.cc  task-gpu-empty.cc  team-barrier.cc  team-cpus-master-member.cc  team-cpus-parallel-for.cc  team-cpus.cc  team-device.cc
tests/api/c/: CMakeLists.txt  task-with-access.c
tests/khp-tree/: noop-khp-tree.hpp  random.cc
utils/: task-logs-to-csv.py  task-plot-gantt-csv.py
(+109 files in other folders)
